# SoftwareDesignPatternsHW2

./: CMakeLists.txt  DistributionTester.cpp  NoChangeUpgrade.c  NoChangeUpgradePython.py  NoChangeUpgradeTemplates.cpp  ProceduralStyle.cpp  StreamObservers.cpp
Observables/: FileSubject.cpp  FileSubject.h  KeyboardSubject.cpp  KeyboardSubject.h  NumberSequence.cpp  NumberSequence.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
Strategies/: PercentileCalculators.h  WholeNumberGenerators.h
